kubernetes/celery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upc-celery-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upc-celery
  template:
    metadata:
      labels:
        app: upc-celery
    spec:
      containers:
      - name: upc-celery
        image: christktmb/upc_bibliotheque:latest
        command: ["celery", "-A", "RH", "worker", "--loglevel=info", "-P", "gevent"]
