kubernetes/upc-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upc-app-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upc-app
  template:
    metadata:
      labels:
        app: upc-app
    spec:
      containers:
      - name: upc-app
        image: christktmb/upc_bibliotheque:1.1
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: upc-bibliotheque-svc
spec:
  selector:
    app: upc-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
