kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: upc-bibliotheque-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: upc-bibliotheque.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: upc-bibliotheque-svc
            port:
              number: 8000
